# neuro-san

./: .flake8  .gitignore  .pylintrc  LICENSE.txt  MANIFEST.in  README.md  README_clients.md  README_setup.md  pyproject.toml  pytest.ini  requirements-build.txt  requirements-private.txt  requirements.txt  setup.py  sidtestfile.txt
.github/workflows/: integration.yml  smoke.yml  smoke.yml.old  smoke.yml.old1  tests.yml
build_scripts/: Dockerfile  build.sh  codefresh.yml  integration-tests.yml  requirements_handler.py  run.sh  run_pylint.sh  source_available_copyright.txt
docs/: agent_hocon_reference.md  agent_manifest_reference.hocon  llm_info_hocon_reference.md  test_case_hocon_reference.md  toolbox_info_hocon_reference.md
neuro_san/api/grpc/: agent.proto  agent_pb2.py  agent_pb2_grpc.py  agent_service.json  chat.proto  chat_pb2.py  chat_pb2_grpc.py  concierge.proto  concierge_pb2.py  concierge_pb2_grpc.py  mime_data.proto  mime_data_pb2.py  mime_data_pb2_grpc.py  swagger.json  tasks_service.proto  tasks_service_pb2.py  tasks_service_pb2_grpc.py
neuro_san/api/scripts/: check-openai-plugin.sh  check_openapi_plugin.sh  convert_yaml_to_json.sh  do_generate.sh  protobuf_manifest.txt
neuro_san/chat/: async_collating_queue.py  async_queue_iterator.py  chat_session.py  data_driven_chat_session.py
neuro_san/client/: abstract_input_processor.py  agent_cli.py  agent_session_factory.py  direct_agent_session_factory.py  polling_input_processor.py  simple_one_shot.py  streaming_input_processor.py  thinking_file_message_processor.py
neuro_san/client/util/: client_utils.py
neuro_san/coded_tools/: neuro_tools.py  rag_global.py  website_search_global.py
neuro_san/coded_tools/analytics/: analytics_output_generator.py  code_validator.py  (+4 more)
neuro_san/deploy/: Dockerfile  build.sh  entrypoint.sh  logging.json  run.sh
neuro_san/errors/: error_detector.py  error_formatter_factory.py  json_error_formatter.py  string_error_formatter.py
neuro_san/grpc/: do_generate.sh
neuro_san/http_sidecar/: handler_factory.py  http_server_app.py  http_server_application.py  http_sidecar.py  logging.json
neuro_san/interfaces/: agent_session.py  agent_session_constants.py  async_agent_session.py  async_hopper.py  coded_tool.py  concierge_session.py  error_formatter.py  invocation_context.py  registry_update_type.py  registry_updates_policy.py
neuro_san/internals/: README.md
neuro_san/journals/: compatibility_journal.py  compound_journal.py  journal.py  message_journal.py  text_journal.py
neuro_san/message_processing/: answer_message_processor.py  basic_message_processor.py  chat_context_message_processor.py  composite_message_processor.py  message_processor.py
neuro_san/messages/: agent_framework_message.py  agent_message.py  chat_message_type.py  legacy_logs_message.py  message_utils.py
neuro_san/proto/: agent.proto  protobuf_manifest.txt
neuro_san/registries/: airbnb.hocon  analytics.hocon  assess_failure.hocon  banking_ops.hocon  consumer_decision_assistant.hocon  cpg_agents.hocon  esp_decision_assistant.hocon  expedia.hocon  hello_world.hocon  insurance_agents.hocon  intranet_agents.hocon  manifest.hocon  math_guy.hocon  music_nerd_pro.hocon  music_nerd_pro_llm_anthropic.hocon  music_nerd_pro_structured_output.hocon  neuro_tools.hocon  prebuilt_search_tool.hocon  rag_website_search.hocon  retail_ops_and_customer_service.hocon  six_thinking_hats.hocon  spam_filter.hocon  telco_network_support.hocon  weather_search.hocon  website_rag.hocon  website_search.hocon  website_search_usage_example.hocon
neuro_san/registries_watcher/: manifest_update_policy.py  registry_change_handler.py  registry_observer.py  registry_watcher.py
neuro_san/service/: Dockerfile  agent_main_loop.py  agent_server.py  agent_service.py  agent_servicer_to_server.py  async_agent_service.py  atomic_counter.py  base_agent_service.py  build.sh  chat_message_converter.py  concierge_service.py  dynamic_agent_router.py  entrypoint.sh  grpc_agent_service.py  logging.json  registry_manifest_restorer.py  run.sh
neuro_san/session/: agent_service_stub.py  agent_session.py  async_direct_agent_session.py  async_grpc_service_agent_session.py  async_http_service_agent_session.py  async_service_agent_session.py  asyncio_executor.py  chat_session_map.py  direct_agent_session.py  direct_concierge_session.py  external_agent_session_factory.py  grpc_concierge_session.py  grpc_service_agent_session.py  http_service_agent_session.py  registry_manifest_restorer.py  service_agent_session.py  session_invocation_context.py
neuro_san/toolbox/: prebuilt_tools.py
neuro_san/utils/: file_of_class.py  message_utils.py  neuro_san_message.py  stream_to_logger.py
neuro_san_mcp_server/: neuro_san_mcp_server.py
proto/: agent.proto  backend_shared_proto.txt
tests/: conftest.py
tests/client/: test_client_response.py
tests/e2e/: README.md  conftest.py  pytest.ini  requirements.txt
tests/fixtures/: chicken.txt
tests/neuro_san/: agent_cli.py  agent_session_factory.py  direct_agent_session_factory.py  list_hopper.py  resources_cli.py  test_base_tool_factory.py  test_base_tool_info.hocon  test_connectivity_reporter.py  test_dictionary_common_defs_config_filter.py  test_llm_factory.py  test_llm_info.hocon  test_sly_data_redactor.py
(+252 files in other folders)
