[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro_san"
authors = [
    { name="Dan Fink", email="Daniel.Fink@cognizant.com" }
]
description = "NeuroAI data-driven System for multi-Agent Networks"
keywords = ["LLM", "langchain", "agent", "multi-agent"]
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",

    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",

    # We still need to classify our academic license
    # "License :: XXX :: XXX"
]
# "dynamic" says we are going to get these project properties by dynamic means.
# More on each below
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
# Specify the dependencies for the library from what is given in requirements.txt
dependencies = {file = ["requirements.txt"]}

# Note that the requirements.txt dependencies do not include private dependencies
# on purpose.  We acknowledge them with the entry below, but that doesn't really
# do anything for packaging.
optional-dependencies = {dev = {file = ["requirements-private.txt"]}}

[tool.setuptools.packages.find]
# Standard setup has source existing under /src directory.
# That's not what we tend to do.
where = ["neuro_san"]

[tool.setuptools-git-versioning]
# Allows for getting the version of the library from github tags.
enabled = true

[project.urls]
Homepage = "https://github.com/leaf-ai/neuro-san"
Repository = "https://github.com/leaf-ai/neuro-san"
